src/test/deca/syntax/valid/DeclClassParamMult.deca
//Test pour de mutliple paramètres dans la déclaration d'une fonction

class Thing {

    int getI(int i, int j, string char, float fifi){
        print("cool");
    }

}
